# strto

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Justfile  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI.yml  lint.yml  publish.yml  python-publish.yml  tests.yml
strto/: __init__.py  constants.py  converters.py  core.py  parser.py  parsers.py  test_converters.py  union_parameter.py  util.py  utils.py
tests/: conftest.py  test_core.py  test_models.py  test_parser.py  test_parsers.py  test_type_alias.py  test_util.py
