[project]
name = "strto"
version = "0.2.9"
description = "Type-guided parsing library for converting strings to Python objects"
authors = [{ name = "Žiga Ivanšek", email = "ziga.ivansek@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["stdl>=0.7.1", "objinspect>=0.4.3"]


classifiers = [
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

keywords = [
    "python string to object",
    "python object parser",
    "parser",
    "python type hint parser",
    "python string parser",
    "string parsing",
    "type-hints",
    "type-conversion",
    "parsing",
]

[project.optional-dependencies]
test = ["pytest>=9.0.3", "coverage>=7.14.1", "pydantic>=2"]
dev = [
    "pytest>=9.0.3",
    "coverage>=7.14.1",
    "ruff==0.15.16",
    "pre-commit>=4.6.0",
    "codespell>=2.4.2",
    "pyrefly>=1.0.0",
    "pydantic>=2",
    "rattle-lint>=2.5.1",
]

[project.urls]
Repository = "https://github.com/zigai/strto"
Issues = "https://github.com/zigai/strto/issues"
Homepage = "https://github.com/zigai/strto"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "strto"
module-root = ""

[tool.coverage.run]
source = ["strto"]
branch = true

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    'if typing.TYPE_CHECKING:',
]
omit = ["tests/*", "tests/**"]

[tool.pyrefly]
project-includes = ["strto"]
project-excludes = ["tests/**"]
disable-project-excludes-heuristics = true
search-path = ["."]
disable-search-path-heuristics = true
python-version = "3.10"
enabled-ignores = ["type", "pyrefly"]
use-ignore-files = false
check-unannotated-defs = true
infer-return-types = "checked"
infer-with-first-use = true
strict-callable-subtyping = false
spec-compliant-overloads = false

[tool.codespell]
skip = '.git,uv.lock'

[tool.uv]
default-groups = ["test"]
[dependency-groups]
dev = [
    "codespell>=2.4.2",
    "pre-commit>=4.6.0",
    "pyrefly>=1.0.0",
    "rattle-lint>=2.5.1",
    "ruff==0.15.16",
]
test = ["pytest>=9.0.3", "coverage>=7.14.1", "pydantic>=2"]

[tool.rattle]
root = true
enable = [
    "blank-line-after-control-block",
    "blank-line-after-terminal-control-block",
    "blank-line-before-branch",
    "blank-line-before-unrelated-block",
    "no-suite-leading-trailing-blank-lines",
    "module-all-at-bottom",
    "no-underscore-all-exports",
    "forbidden-call",
    "no-relative-imports",
    "no-underscore-import-aliases",
    "no-unsafe-tempfile-factories",
    "no-annotated-self",
    "no-exception-message-variables",
    "no-str-exception-translation",
    "no-underscore-class",
    "public-method-order",
    "no-bare-object-annotations",
    "no-named-tuple",
    "no-static-if-condition",
    "sorted-attributes",
    "use-callable-ellipsis",
]

[tool.rattle.options."forbidden-call"]
forbidden_calls = ["typing.cast"]

[tool.ruff]
line-length = 100

[tool.ruff.per-file-target-version]
"tests/test_type_alias.py" = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ERA",
    "FBT002",
    "COM",
    "CPY",
    "DJ",
    "ANN003",
    "FIX",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D205",
    "D203",
    "D212",
    "E501",
    "PIE804",
    "S101",
    "EM101",
    "PYI041",
    "PYI051",
    "PYI046",
    "PYI047",
    "PYI049",
    "PYI053",
    "PYI054",
    "RET501",
    "SIM910",
    "N812",
    "PLC0415",
    "PLR0904",
    "PLR0913",
    "PLR2004",
    "PLR1711",
    "TRY003",
    "T20",
    "SIM105",
    "RET504",
    "PLR0912",
    "PLR0915",
    "SIM105",
    "TD",
    "TC001",
    "TC002",
    "TC003",
    "TC006",
    "PLW0603",
    "EM102",
    "PLW2901",
    "RSE102",
    "PGH004",
    "N806",
    "FBT001",
]
exclude = ["build"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # Unused import
    "E402", # Module import not at top of file
]
"**/tests/**/*.py" = [
    "S104",
    "S105",
    "S106",
    "TRY004",
    "RUF003",
    "RUF012",
    "UP031",
    "SLF001",
    "ARG",
    "N806",
    "ANN001",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN401",
    "S",
    "SLF001",
    "INP001",
    "PLW0108",
    "EM102",
    "FBT001",
    "SIM300",
]
"examples/*.py" = ["INP001"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "pydantic.validator",
    "declared_attr",
    "expression",
    "comparator",
]

[tool.ruff.lint.flake8-builtins]
ignorelist = ["id", "input"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "sqlalchemy.orm.DeclarativeBase",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["strto", "tests"]

[tool.ruff.lint.pydocstyle]
convention = "google"
